--- a/.github/workflows/auto-rental.yml
+++ b/.github/workflows/auto-rental.yml
@@ -1,4 +1,4 @@
-name: 리디북스 자동 대여 시스템
+name: 리디북스 자동 대여 시스템 (Playwright)
 
 on:
   schedule:
@@ -19,21 +19,11 @@ jobs:
       with:
         node-version: '18'
         
-    - name: Puppeteer 캐시 설정
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/puppeteer
-        key: ${{ runner.os }}-puppeteer-${{ hashFiles('package.json') }}
-        restore-keys: |
-          ${{ runner.os }}-puppeteer-
-          
-    - name: 의존성 설치
+    - name: Playwright 설치
       run: |
-        npm ci --prefer-offline --no-audit
-        # Puppeteer 설치 시 타임아웃 방지
-        npm config set fetch-timeout 600000
-        npm config set fetch-retry-mintimeout 20000
-        npm config set fetch-retry-maxtimeout 120000
+        npm init -y
+        npm install playwright
+        npx playwright install chromium --with-deps
         
     - name: 리디북스 자동 대여 실행
       env:
@@ -41,7 +31,7 @@ jobs:
         RIDI_PASSWORD: ${{ secrets.RIDI_PASSWORD }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-      run: node scripts/auto-rental.js
+      run: node scripts/auto-rental-playwright.js
       
     - name: 로그 저장
       uses: actions/upload-artifact@v4
